Fix z-index of controls
Controls always on top
* Pending: verified icons are showing on the controls
At its smallest acceptable screen size, right buttons
for video sizing appear again

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ div.ytp-chrome-bottom {
   position: fixed;
   background-color: black;
   width: 98% !important;
+  z-index: 1000;
 }
 
 .ytp-left-controls > .ytp-play-button.ytp-button {
@@ -29,6 +30,12 @@ div.ytp-chrome-bottom {
 
 .ytp-right-controls > .ytp-size-button.ytp-button {
   display: none;
+}
+
+/* Send other divs to back */
+div#player {
+  position: relative;
+  z-index: 1;
 }
 
 /* Comment section */
